# edge-device-raspi-cam

MQTT-demo/: publisher.cpp  subscriber.cpp
io/demo/cpp/: camera_test.cpp  camera_test_cpp
io/demo/cpp/libcamera_zerocopy/: Makefile  Makefile.opencv_demo  Makefile.openvino_demo  Makefile.rgb888  analyze_yuv.cpp  convert_rgb_to_png.sh  convert_yuv_all.sh  convert_yuv_enhanced.sh  convert_yuv_to_png.sh  openmp_test  openmp_test.cpp  yuv_test.cpp  zero_copy_demo  zero_copy_demo.cpp  zero_copy_demo_h264.cpp  zero_copy_dma_buf.cpp  zero_copy_dma_buf_rgb888.cpp  zero_copy_fps_test.cpp  zero_copy_opencv_demo.cpp  zero_copy_openvino_demo.cpp
io/demo/cpp/libcamera_zerocopy/openvino/: Makefile  Makefile.opencv_demo  Makefile.openvino_demo  combined_rtsp_inference_demo.cpp  kalman_tracker.cpp  kalman_tracker.hpp  log_1.txt  log_2.txt  log_3.txt  log_4.txt  log_5.txt  log_6.txt  log_7.txt  log_8.txt  object_tracker.cpp  object_tracker.hpp  sort.cpp  sort.hpp  v5_log.txt  v5_track_log.txt  zero_copy_opencv_demo.cpp  zero_copy_openvino_demo.cpp  zero_copy_openvino_demo_headless.cpp  zero_copy_openvino_demo_headless_v5.cpp  zero_copy_openvino_sort_demo.cpp  zero_copy_openvino_yolo11n_demo_headless.cpp  zero_copy_openvino_yolov5_line_crossing_demo.cpp  zero_copy_openvino_yolov5_line_crossing_visual_demo.cpp  (+4 more)
io/demo/cpp/libcamera_zerocopy/openvino/sort_cpp/: CMakeLists.txt  README_CPP.md  Sort.cpp  Sort.h  main_console.cpp  main_visual.cpp
io/demo/cpp/opencv/: check_build  check_build.cpp
io/demo/cpp/v4l2_demo/: build_opencv.sh  capture_app  capture_libcamera_sdl.cpp  capture_opencv.cpp  capture_v4l2  capture_v4l2.cpp  capture_v4l2_sdl  capture_v4l2_sdl.cpp  v4l2_trace.txt
io/demo/py/: picamera_demo.py
(+29 files in other folders)
